# VPR

./: .env_sample  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Justfile  README.md  compose.dev.yml  cspell.config.json  deny.toml  doc-header.html  rust-toolchain.toml
.github/: copilot-instructions.md
.github/workflows/: main.yml  non-main.yml
crates/api/: Cargo.toml
crates/api-grpc/: Cargo.toml  build.rs
crates/api-grpc/src/: lib.rs  main.rs  service.rs
crates/api-proto/: Cargo.toml  build.rs
crates/api-proto/src/: lib.rs
crates/api-rest/: Cargo.toml
crates/api-rest/src/: lib.rs  main.rs
crates/api-shared/: Cargo.toml  build.rs  vpr.proto
crates/api-shared/src/: auth.rs  health.rs  lib.rs
crates/api/src/: main.rs
crates/certificates/: Cargo.toml
crates/certificates/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: author.rs  clinical.rs  config.rs  constants.rs  demographics.rs  error.rs  git.rs  lib.rs  markdown.rs  patient.rs  repo.rs  shared.rs  types.rs  uuid.rs  validation.rs  versioned_files.rs
crates/core/src/components/: ehr_status.rs  mod.rs  narrative.rs
crates/core/src/paths/: common.rs  mod.rs
crates/core/src/paths/clinical/: common.rs  ehr_status.rs  letter.rs  mod.rs
crates/core/src/paths/coordination/: coordination_status.rs  mod.rs
crates/core/src/paths/demographics/: mod.rs  patient.rs
crates/core/src/repositories/: clinical.rs  coordination.rs  demographics.rs  mod.rs  shared.rs
crates/core/templates/clinical/: README.md
crates/fhir/: Cargo.toml
crates/fhir/src/: coordination_status.rs  lib.rs  messaging.rs  patient.rs
crates/files/: Cargo.toml
crates/files/src/: constants.rs  files.rs  lib.rs
crates/openehr/: Cargo.toml
crates/openehr/src/: clinical_list.rs  data_types.rs  lib.rs  validation.rs  vpr.rs
crates/openehr/src/public_structs/: letter.rs  mod.rs
crates/openehr/src/rm_1_1_0/: constants.rs  ehr_status.rs  letter.rs  mod.rs  narrative.rs
crates/uuid/: Cargo.toml
crates/uuid/src/: lib.rs  service.rs
crates/vpr-proto/: build.rs
crates/vpr-types/: Cargo.toml
crates/vpr-types/src/: lib.rs
crates/vpr/src/: lib.rs
docs/: .gitignore  book.toml
docs/src/: SUMMARY.md  cli.md  design-decisions-writing-workers.md  design-decisions.md  git.md  index.md  installation.md  literature-review.md  overview.md  specifications.md  technical.md  thanks-to.md  todo.md  vpr-overview.md
docs/src/llm/: copilot-instructions.md  index.md  roadmap.md  spec.md
docs/src/standards/: fhir.md  index.md  openehr.md
docs/src/technical/: api-grpc.md  api-rest.md  comments.md  design-decisions.md  file-storage.md  git.md  index.md  large-file-storage.md  messaging.md
docs/src/technical/clinical/: ehr-status.md  index.md
docs/src/technical/clinical/communications/: index.md  letters.md
docs/src/technical/coordination/: fhir.md  index.md  messaging.md
docs/src/technical/demographics/: index.md
docs/src/technical/open-ehr/: ehr-status.md  index.md
docs/src/technical/redaction/: index.md
ehr-template/: README.md
ehr-template/.ehr/: README.md
handbook/: book.toml
handbook/src/: development.md  documentation.md  index.md  specifications.md  todo.md
handbook/theme/css/: custom.css
prompts/: documenation-update.md  run-full-cli.md
scripts/: audit.sh  check-all.sh  deny.sh  fmt.sh  lint.sh
src/: main.rs
vpr-template/.vpr/: README.md
