[workspace]
members = [
	"crates/api",
	"crates/vpr-temp",
	"crates/vpr-proto",
]
resolver = "2"

[package]
name = "vpr-run"
version = "0.1.0"
edition = "2021"

[dependencies]
api = { path = "crates/api" }
tonic = { version = "0.12" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"

[workspace.metadata]
default-run = "vpr-run"
