[workspace]
members = [
	"crates/api-grpc",
	"crates/api-proto",
	"crates/core",
]
resolver = "2"

[package]
name = "vpr-run"
version = "0.1.0"
edition = "2024"

default-run = "vpr-run"

[dependencies]
api-grpc = { path = "crates/api-grpc" }
tonic = { version = "0.12" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"

[workspace.metadata]
default-run = "vpr-run"
