[workspace]
members = [
	"crates/api-grpc",
	"crates/api-shared",
	"crates/api-rest",
	"crates/core",
	"crates/cli",
	"crates/certificates",
	"crates/files",
	"crates/openehr",
	"crates/uuid",
]
resolver = "2"

[package]
name = "vpr-run"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

default-run = "vpr-run"

[dependencies]
api-grpc = { path = "crates/api-grpc", version = "0.1.0" }
api-shared = { path = "crates/api-shared", version = "0.1.0" }
vpr-core = { path = "crates/core", version = "0.1.0" }
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tonic = "0.12"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
dotenvy = "0.15"
hyper = "1.0"
http-body-util = "0.1"
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7", features = ["axum", "reqwest"] }
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"

[workspace.metadata]
default-run = "vpr-run"
