[package]
name = "api-grpc"
version = "0.1.0"
edition = "2021"
description = "VPR gRPC API crate"
license = "MIT"

[lib]
name = "api_grpc"
path = "src/lib.rs"

[[bin]]
name = "vpr-api-grpc"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tonic = { version = "0.12", features = ["transport"] }
tonic-reflection = "0.12"
prost = "0.13"
prost-types = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
vpr-core = { path = "../core" }
api-shared = { path = "../api-shared" }
