[package]
name = "api-rest"
version = "0.1.0"
edition = "2021"
description = "VPR REST API crate"
license = "MIT"

[lib]
name = "api_rest"
path = "src/lib.rs"

[[bin]]
name = "vpr-api-rest"
path = "src/main.rs"

[dependencies]
api-shared = { path = "../api-shared", version = "0.1.0" }
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
chrono = "0.4"
vpr-core = { path = "../core", version = "0.1.0" }
fhir = { path = "../fhir", version = "0.1.0" }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tonic = "0.12"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }