[package]
name = "api-shared"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[lib]
name = "api_shared"
path = "src/lib.rs"

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"

[dependencies]
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
tonic = { version = "0.12" }
utoipa = "4"
