[package]
name = "api"
version = "0.1.0"
edition = "2021"
description = "VPR API crate (gRPC health service)"
license = "MIT"

[lib]
name = "api"
path = "src/lib.rs"

[[bin]]
name = "vpr-api"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tonic = { version = "0.12", features = ["transport"] }
tonic-reflection = "0.12"
prost = "0.13"
prost-types = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
vpr-temp = { path = "../vpr-temp" }
vpr-proto = { path = "../vpr-proto" }
