[package]
name = "core"
version = "0.1.0"
edition = "2021"

[lib]
name = "core"
path = "src/lib.rs"

[dependencies]
api-shared = { path = "../api-shared" }
tonic = { version = "0.12" }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
