[package]
name = "vpr-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "vpr_core"
path = "src/lib.rs"

[dependencies]
api-shared = { path = "../api-shared" }
tonic = { version = "0.12" }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
git2 = "0.18"
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
pem = "1.1"
base64 = "0.21"
rand = "0.8"
x509-parser = "0.16"

[dev-dependencies]
tempfile = "3.0"
