[package]
name = "vpr_files"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/bailey-medics/VPR"
documentation = "https://docs.rs/vpr_files"
description = "File storage and management for VPR (Versioned Patient Repository)"

[dependencies]
thiserror = "2.0"
sha2 = "0.10"
hex = "0.4"
vpr-uuid = { path = "../uuid", version = "0.1.0" }
vpr-types = { path = "../vpr-types" }
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
infer = "0.16"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.15"
serde_json = "1.0"
